Fixed random horizontal scrollbars that would appear with some datatables

--- a/public/css/fiercephish.css
+++ b/public/css/fiercephish.css
@@ -91,3 +91,7 @@ tr.selected {
 .single_pointer {
   cursor: pointer;
 }
+
+.dataTables_wrapper>.row {
+  overflow-x: hidden !important;
+}
